--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.10.0",
     "numpy>=2.2.2",
+    "scikit-learn>=1.6.1",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.4",
+    "xgboost>=3.0.0",
     "yfinance>=0.2.52",
 ]
 
